# SeleniumPlusPlus

./: .gitignore  HOWTO.md  README.md  how.to  pyproject.toml  requirements.txt
seleniumplusplus/: logger.py  selenium_initializer.py  selenium_utils.py  test.py
seleniumplusplus/tests/: test.py
seleniumplusplus/tests/page/: index.html
